REran final stage with CIGALE duplicate removal

--- a/dmu32/3_The_end.ipynb
+++ b/dmu32/3_The_end.ipynb
@@ -27,7 +27,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2020-10-29 16:29:47.508114\n"
+      "2020-10-30 13:59:28.967489\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
       "EGS\n",
       "../dmu32/dmu32_EGS/data/EGS_20180501.fits\n",
       "COSMOS\n",
-      "../dmu32/dmu32_COSMOS/data/COSMOS_20190402_cigale.fits\n",
+      "../dmu32/dmu32_COSMOS/data/COSMOS_20190402.fits\n",
       "HATLAS-SGP\n",
       "../dmu32/dmu32_SGP/data/SGP_20180221.fits\n",
       "Lockman-SWIRE\n",
@@ -253,10 +253,8 @@
       "../dmu1/dmu1_ml_NGP/data/depths_ngp_20180219.fits\n",
       "../dmu1/dmu1_ml_ELAIS-N2/data/depths_elais-n2_20180218.fits\n",
       "../dmu1/dmu1_ml_EGS/data/depths_egs_20180501.fits\n",
-      "../dmu1/dmu1_ml_COSMOS/data/depths_cosmos_20180516.fits\n",
       "../dmu1/dmu1_ml_SGP/data/depths_sgp_20180221.fits\n",
       "../dmu1/dmu1_ml_Lockman-SWIRE/data/depths_lockman-swire_20180219.fits\n",
-      "../dmu1/dmu1_ml_XMM-LSS/data/depths_xmm-lss_20180504.fits\n",
       "../dmu1/dmu1_ml_ELAIS-N1/data/depths_elais-n1_20171016.fits\n",
       "../dmu1/dmu1_ml_AKARI-SEP/data/depths_akari-sep_20180221.fits\n",
       "../dmu1/dmu1_ml_GAMA-09/data/depths_gama-09_20180601.fits\n",
@@ -264,7 +262,6 @@
       "../dmu1/dmu1_ml_ELAIS-S1/data/depths_elais-s1_20180416.fits\n",
       "../dmu1/dmu1_ml_XMM-13hr/data/depths_xmm-13hr_20180501.fits\n",
       "../dmu1/dmu1_ml_Herschel-Stripe-82/data/depths_herschel-stripe-82_20180307.fits\n",
-      "../dmu1/dmu1_ml_CDFS-SWIRE/data/depths_cdfs-swire_20180221.fits\n",
       "../dmu1/dmu1_ml_SPIRE-NEP/data/depths_spire-nep_20180220.fits\n",
       "../dmu1/dmu1_ml_SSDF/data/depths_ssdf_20180221.fits\n"
      ]
@@ -363,8 +360,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SA13:\n",
-      "Bootes:\n"
+      "SA13:\n"
      ]
     },
     {
@@ -379,6 +375,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Bootes:\n",
       "xFLS:\n",
       "GAMA-15:\n",
       "GAMA-12:\n",
@@ -388,7 +385,6 @@
       "ELAIS-N2:\n",
       "EGS:\n",
       "COSMOS:\n",
-      "Problem reading dmu_products/dmu32/dmu32_COSMOS/data/COSMOS_20190402_cigale.fits\n",
       "HATLAS-SGP:\n",
       "Lockman-SWIRE:\n",
       "XMM-LSS:\n",
@@ -460,13 +456,13 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table139933063866520-195784\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140064550750752-768522\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>objects</th><th>dr1_file</th><th>dr1_file_hash</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th><th>xid_objects</th><th>photoz_objects</th><th>cigale_objects</th></tr></thead>\n",
-       "<tr><td>0</td><td>AKARI-NEP</td><td>531747</td><td>dmu_products/dmu32/dmu32_AKARI-NEP/data/AKARI-NEP_20180215.fits</td><td>0d7b7566184870ee33c86c793d4788ba</td><td>9.194732358779467</td><td>433442880</td><td>433.44 MB</td><td>31442</td><td>107229</td><td>1240</td></tr>\n",
+       "<tr><td>0</td><td>AKARI-NEP</td><td>531746</td><td>dmu_products/dmu32/dmu32_AKARI-NEP/data/AKARI-NEP_20180215.fits</td><td>5b33074e816785e05407952f03e78354</td><td>9.194732358779467</td><td>433440000</td><td>433.44 MB</td><td>31441</td><td>107228</td><td>1239</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>844172</td><td>dmu_products/dmu32/dmu32_AKARI-SEP/data/AKARI-SEP_20180221.fits</td><td>56889960f654742f80329e8ebb0053d5</td><td>8.713306475131118</td><td>668652480</td><td>668.65 MB</td><td>108119</td><td>139059</td><td>566</td></tr>\n",
-       "<tr><td>2</td><td>Bootes</td><td>3398098</td><td>dmu_products/dmu32/dmu32_Bootes/data/Bootes_20190701.fits</td><td>70f12e14edd84aa1fe3c41816ad29041</td><td>11.42815299095486</td><td>5556003840</td><td>5.56 GB</td><td>495159</td><td>1570512</td><td>38980</td></tr>\n",
+       "<tr><td>2</td><td>Bootes</td><td>3398098</td><td>dmu_products/dmu32/dmu32_Bootes/data/Bootes_20190701.fits</td><td>6d2f18ef25a42999d805b258c751fde2</td><td>11.42815299095486</td><td>5556003840</td><td>5.56 GB</td><td>495159</td><td>1570512</td><td>38980</td></tr>\n",
        "<tr><td>3</td><td>CDFS-SWIRE</td><td>2171051</td><td>dmu_products/dmu32/dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180613.fits</td><td>7bb01da6145d35ffa157b7c3ee0209ce</td><td>12.971246403717068</td><td>6059603520</td><td>6.06 GB</td><td>73511</td><td>136944</td><td>9308</td></tr>\n",
-       "<tr><td>4</td><td>COSMOS</td><td>2599374</td><td>dmu_products/dmu32/dmu32_COSMOS/data/COSMOS_20190402_cigale.fits</td><td>52da3e4b5f8d1ba7bd6ea96e042f78c7</td><td>5.083863478496816</td><td>10704487680</td><td>10.7 GB</td><td>25898</td><td>691502</td><td>0</td></tr>\n",
+       "<tr><td>4</td><td>COSMOS</td><td>2599374</td><td>dmu_products/dmu32/dmu32_COSMOS/data/COSMOS_20190402.fits</td><td>c900763f01cd327b84fafa3defe46151</td><td>5.083863478496816</td><td>10954031040</td><td>10.95 GB</td><td>25898</td><td>691502</td><td>15747</td></tr>\n",
        "<tr><td>5</td><td>EGS</td><td>1412613</td><td>dmu_products/dmu32/dmu32_EGS/data/EGS_20180501.fits</td><td>74ce7e6bd7a982141d7558fad62b38df</td><td>3.566383275122158</td><td>4018965120</td><td>4.02 GB</td><td>223598</td><td>1182503</td><td>4159</td></tr>\n",
        "<tr><td>6</td><td>ELAIS-N1</td><td>4026292</td><td>dmu_products/dmu32/dmu32_ELAIS-N1/data/ELAIS-N1_20171016.fits</td><td>97ccb7d86c92aa9e9ba0657c9e737276</td><td>13.507484555454763</td><td>6007360320</td><td>6.01 GB</td><td>269611</td><td>2714686</td><td>49985</td></tr>\n",
        "<tr><td>7</td><td>ELAIS-N2</td><td>1783240</td><td>dmu_products/dmu32/dmu32_ELAIS-N2/data/ELAIS-N2_20180218.fits</td><td>09628a8b89fd5eeea27d6059988eb900</td><td>9.167479903991113</td><td>2321884800</td><td>2.32 GB</td><td>86591</td><td>120723</td><td>6798</td></tr>\n",
@@ -474,16 +470,16 @@
        "<tr><td>9</td><td>GAMA-09</td><td>12937982</td><td>dmu_products/dmu32/dmu32_GAMA-09/data/GAMA-09_20180601.fits</td><td>6712784e0dd54abaca5dc46b82a2c7a5</td><td>62.01393417284915</td><td>21839469120</td><td>21.84 GB</td><td>1386659</td><td>8833874</td><td>130293</td></tr>\n",
        "<tr><td>10</td><td>GAMA-12</td><td>12369415</td><td>dmu_products/dmu32/dmu32_GAMA-12/data/GAMA-12_20180218.fits</td><td>ba0974bee7ab13a2468e235fb3426928</td><td>62.70933280772107</td><td>16476194880</td><td>16.48 GB</td><td>1099477</td><td>8569951</td><td>108139</td></tr>\n",
        "<tr><td>11</td><td>GAMA-15</td><td>14232880</td><td>dmu_products/dmu32/dmu32_GAMA-15/data/GAMA-15_20180213.fits</td><td>832509b2d9b09a9848dfe40695d298cb</td><td>61.70114565980842</td><td>18716371200</td><td>18.72 GB</td><td>1236395</td><td>10083210</td><td>117234</td></tr>\n",
-       "<tr><td>12</td><td>HATLAS-NGP</td><td>6761879</td><td>dmu_products/dmu32/dmu32_NGP/data/NGP_20180219.fits</td><td>da59170abf6be69159a771c65100d40d</td><td>177.6981971077162</td><td>5964091200</td><td>5.96 GB</td><td>1235835</td><td>3169240</td><td>185668</td></tr>\n",
-       "<tr><td>13</td><td>HATLAS-SGP</td><td>29790690</td><td>dmu_products/dmu32/dmu32_SGP/data/SGP_20180221.fits</td><td>44c68e32576da4e67df4e5947b43b3a4</td><td>294.5684540900642</td><td>47039604480</td><td>47.04 GB</td><td>3511594</td><td>17054138</td><td>352804</td></tr>\n",
+       "<tr><td>12</td><td>HATLAS-NGP</td><td>6761879</td><td>dmu_products/dmu32/dmu32_NGP/data/NGP_20180219.fits</td><td>d1637c1975bf93a56fd3cf8818f2f1df</td><td>177.6981971077162</td><td>5964056640</td><td>5.96 GB</td><td>1235835</td><td>3169240</td><td>185668</td></tr>\n",
+       "<tr><td>13</td><td>HATLAS-SGP</td><td>29790690</td><td>dmu_products/dmu32/dmu32_SGP/data/SGP_20180221.fits</td><td>d16d97a07cca1f4c2552206a2b51dc68</td><td>294.5684540900642</td><td>47039604480</td><td>47.04 GB</td><td>3511594</td><td>17054138</td><td>352804</td></tr>\n",
        "<tr><td>14</td><td>HDF-N</td><td>130679</td><td>dmu_products/dmu32/dmu32_HDF-N/data/HDF-N_20180427.fits</td><td>eda45995ea7811f618393675056ff003</td><td>0.6717832558166041</td><td>190630080</td><td>190.63 MB</td><td>834</td><td>7435</td><td>0</td></tr>\n",
-       "<tr><td>15</td><td>Herschel-Stripe-82</td><td>50231153</td><td>dmu_products/dmu32/dmu32_Herschel-Stripe-82/data/Herschel-Stripe-82_20180307.fits</td><td>d7226df541b0204d7b8b1198080ff868</td><td>363.22747930641884</td><td>133765735680</td><td>133.77 GB</td><td>3011145</td><td>21544146</td><td>285342</td></tr>\n",
+       "<tr><td>15</td><td>Herschel-Stripe-82</td><td>50196455</td><td>dmu_products/dmu32/dmu32_Herschel-Stripe-82/data/Herschel-Stripe-82_20180307.fits</td><td>2e39482611301daf8a0c1e4cad573842</td><td>363.22747930641884</td><td>133673333760</td><td>133.67 GB</td><td>2976447</td><td>21509448</td><td>250644</td></tr>\n",
        "<tr><td>16</td><td>Lockman-SWIRE</td><td>4366298</td><td>dmu_products/dmu32/dmu32_Lockman-SWIRE/data/Lockman-SWIRE_20180219.fits</td><td>72c4ab422be2081358fb50ba3cb9a867</td><td>22.413863402949218</td><td>5990670720</td><td>5.99 GB</td><td>242065</td><td>1377139</td><td>46719</td></tr>\n",
        "<tr><td>17</td><td>SA13</td><td>9799</td><td>dmu_products/dmu32/dmu32_SA13/data/SA13_20180501.fits</td><td>c2e822dab8edfcf4b178e31c245b1f77</td><td>0.27416379328431184</td><td>4011840</td><td>4.01 MB</td><td>812</td><td>2884</td><td>70</td></tr>\n",
-       "<tr><td>18</td><td>SPIRE-NEP</td><td>2674</td><td>dmu_products/dmu32/dmu32_SPIRE-NEP/data/SPIRE-NEP_20180220.fits</td><td>3bcd023738650ef1ae6035363fe2e120</td><td>0.1280660469377391</td><td>1592640</td><td>1.59 MB</td><td>562</td><td>935</td><td>71</td></tr>\n",
-       "<tr><td>19</td><td>SSDF</td><td>12967479</td><td>dmu_products/dmu32/dmu32_SSDF/data/SSDF_20180221.fits</td><td>1db2c5ec62ab18687892ccd4571c758f</td><td>111.11624949343539</td><td>9972051840</td><td>9.97 GB</td><td>4700829</td><td>9556303</td><td>611152</td></tr>\n",
+       "<tr><td>18</td><td>SPIRE-NEP</td><td>2674</td><td>dmu_products/dmu32/dmu32_SPIRE-NEP/data/SPIRE-NEP_20180220.fits</td><td>e24491b6b9f3db62e7d6e96e4a384ff3</td><td>0.1280660469377391</td><td>1578240</td><td>1.58 MB</td><td>562</td><td>935</td><td>71</td></tr>\n",
+       "<tr><td>19</td><td>SSDF</td><td>12661903</td><td>dmu_products/dmu32/dmu32_SSDF/data/SSDF_20180221.fits</td><td>fc789fa2236f6fc3f2a1cce9e8aa8256</td><td>111.11624949343539</td><td>9737064000</td><td>9.74 GB</td><td>4395253</td><td>9250727</td><td>305576</td></tr>\n",
        "<tr><td>20</td><td>XMM-13hr</td><td>38629</td><td>dmu_products/dmu32/dmu32_XMM-13hr/data/XMM-13hr_20180501.fits</td><td>da7c644f7aeee09034af7040439b32e0</td><td>0.7570240166583633</td><td>15747840</td><td>15.75 MB</td><td>3563</td><td>10773</td><td>670</td></tr>\n",
-       "<tr><td>21</td><td>XMM-LSS</td><td>8705837</td><td>dmu_products/dmu32/dmu32_XMM-LSS/data/XMM-LSS_20190328.fits</td><td>bd34fc932122d8fe035b5a3bef7956c0</td><td>21.75457939331374</td><td>29547829440</td><td>29.55 GB</td><td>360500</td><td>6124027</td><td>61888</td></tr>\n",
+       "<tr><td>21</td><td>XMM-LSS</td><td>8705837</td><td>dmu_products/dmu32/dmu32_XMM-LSS/data/XMM-LSS_20190328.fits</td><td>53e3b49a42cc1900ff06aad3763bc475</td><td>21.75457939331374</td><td>29547829440</td><td>29.55 GB</td><td>360500</td><td>6124027</td><td>61888</td></tr>\n",
        "<tr><td>22</td><td>xFLS</td><td>977148</td><td>dmu_products/dmu32/dmu32_xFLS/data/xFLS_20180501.fits</td><td>983336d6ca349d809ea831cba71a9b1b</td><td>7.44043242140754</td><td>1187294400</td><td>1.19 GB</td><td>52187</td><td>100993</td><td>5944</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
@@ -508,14 +504,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table139933063866520-195784').dataTable()\");\n",
+       "    console.log(\"$('#table140064550750752-768522').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table139933063866520-195784').dataTable({\n",
+       "    $('#table140064550750752-768522').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -549,11 +545,11 @@
      "text": [
       "Totals:\n",
       "Area:              1269.0 Square degrees\n",
-      "Objects :          171944693\n",
-      "XID+ objects :     18350662 (= 11.0 percent)\n",
-      "Redshifts :        94111788 (= 55.0 percent)\n",
-      "CIGALE objects :   2042423 (= 1.0 percent)\n",
-      "Final tables size: 328.71 GB\n",
+      "Objects :          171604418\n",
+      "XID+ objects :     18010387 (= 10.0 percent)\n",
+      "Redshifts :        93771513 (= 55.0 percent)\n",
+      "CIGALE objects :   1717895 (= 1.0 percent)\n",
+      "Final tables size: 328.64 GB\n",
       "\n"
      ]
     }
