rerun all sky per field

--- a/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
+++ b/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
@@ -58,7 +58,7 @@
     "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"%Y%m%d\"))\n",
     "print(SUFFIX)\n",
     "\n",
-    "MAKE_FULL = False"
+    "MAKE_FULL = True"
    ]
   },
   {
@@ -571,9 +571,12 @@
    ],
    "source": [
     "#just cigale objects to make a smaller file\n",
-    "full_cat = full_cat[full_cat['cigale_sfr']>0.]\n",
+    "m = full_cat['cigale_sfr']>0.\n",
+    "full_cat = full_cat[m]\n",
+    "full_sources = full_sources[m]\n",
     "print(len(full_cat))\n",
     "full_cat.write('./data/HELP_all_sky_A-list_{}.fits'.format(SUFFIX), overwrite=True)\n",
+    "full_sources.write('./data/HELP_all_sky_A-list_sources_{}.fits'.format(SUFFIX), overwrite=True)\n",
     "#full_cat.write('./data/HELP_all_sky_xid_A-list_{}.csv'.format(SUFFIX), overwrite=True)\n",
     "#full_sources.write('./data/HELP_all_sky_xid_objects_sources_{}.fits'.format(SUFFIX), overwrite=True)\n",
     "#full_sources.write('./data/HELP_all_sky_xid_objects_sources_{}.csv'.format(SUFFIX), overwrite=True)"
