Cut sources table down to allow writing

--- a/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
+++ b/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
@@ -263,11 +263,13 @@
     "    final_cat = remove_specific_bands(final_cat,always_keep)\n",
     "    \n",
     "    if MAKE_FULL:\n",
+    "        m=final_cat['f_spire_500'] > 0.\n",
     "        final_cat.write('./data/{}_best_phot_{}.fits'.format(meta['field'],SUFFIX), overwrite=True)\n",
-    "        final_cat = final_cat[final_cat['f_spire_500'] > 0.]\n",
-    "    full_cat = vstack([full_cat,final_cat])\n",
-    "                                                           \n",
-    "    sources.write('./data/{}_best_phot_sources_{}.fits'.format(meta['field'],SUFFIX), overwrite=True)                                                       \n",
+    "        final_cat = final_cat[m]\n",
+    "        sources.write('./data/{}_best_phot_sources_{}.fits'.format(meta['field'],SUFFIX), overwrite=True) \n",
+    "        sources= sources[m]\n",
+    "    \n",
+    "    full_cat = vstack([full_cat,final_cat])                                           \n",
     "    full_sources = vstack([full_sources,sources])"
    ]
   },
