Trying garbage collection on AllSky notebook

--- a/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
+++ b/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
@@ -51,8 +51,9 @@
     "from astropy.table import Table, vstack\n",
     "import glob\n",
     "import yaml\n",
-    "import time\n",
     "import os\n",
+    "import time\n",
+    "import gc\n",
     "import numpy as np\n",
     "from herschelhelp_internal.utils import add_column_meta\n",
     "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"%Y%m%d\"))\n",
@@ -130,7 +131,7 @@
    "source": [
     "def get_best_flux(table, band):\n",
     "    \"Return the lowest error non nan band \"\n",
-    "    table=table.copy()\n",
+    "    #table=table.copy()\n",
     "    f_best = np.full(len(table), np.nan)\n",
     "    ferr_best = np.full(len(table), np.nan)\n",
     "    m_best= np.full(len(table), np.nan)\n",
@@ -170,7 +171,7 @@
     "    \n",
     "def remove_specific_bands(table, bands_to_keep):\n",
     "    \"Return the table with all specific band fluxes removed\"\n",
-    "    table = table.copy()\n",
+    "    #table = table.copy()\n",
     "    cols_to_remove = set()\n",
     "    for col in table.colnames:\n",
     "        if col.startswith('m_ap_'):\n",
@@ -270,7 +271,13 @@
     "        sources= sources[m]\n",
     "    \n",
     "    full_cat = vstack([full_cat,final_cat])                                           \n",
-    "    full_sources = vstack([full_sources,sources])"
+    "    full_sources = vstack([full_sources,sources])\n",
+    "    \n",
+    " \n",
+    "    del final_cat\n",
+    "    del sources\n",
+    "    gc.collect()\n",
+    "    time.sleep(10)"
    ]
   },
   {
