replace fill values with nans on flux cols

--- a/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
+++ b/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
@@ -726,6 +726,24 @@
     }
    ],
    "source": [
+    "for c in full_cat.colnames:\n",
+    "    if (\n",
+    "        c.startswith('f_')\n",
+    "        or c.startswith('ferr_')\n",
+    "        or c.startswith('m_')\n",
+    "        or c.startswith('merr_')\n",
+    "    )\n",
+    "    ful_cat[c].fil_value = np.nan\n",
+    "    \n",
+    "    \n",
+    "try:\n",
+    "    full_cat.remove_column('old_help_id')\n",
+    "except KeyError:\n",
+    "    print('No old help id col.')\n",
+    "\n",
+    "full_cat['zspec'].fill_value = np.nan\n",
+    "full_cat[full_cat['zspec']<0]['zspec'] = np.nan\n",
+    "    \n",
     "full_cat = full_cat.filled()\n",
     "full_cat = add_column_meta(full_cat, 'columns.yml')"
    ]
@@ -1067,7 +1085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
