Bugs in Allsky final cat maker

--- a/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
+++ b/dmu32/dmu32_AllSky/1_Make_All_Sky_A-list.ipynb
@@ -23,7 +23,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "1407877 (Mon Feb 4 12:56:29 2019 +0000)\n",
       "This notebook was executed on: \n",
-      "2020-11-10 12:52:54.864116\n"
+      "2020-11-11 12:48:32.686124\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20201110\n"
+      "20201111\n"
      ]
     }
    ],
@@ -250,8 +250,9 @@
     "            or c.startswith('m_')\n",
     "            or c.startswith('merr_')\n",
     "        ):\n",
-    "            final_cat[c].fil_value = np.nan\n",
-    "            m = final_cat[c] == np.inf\n",
+    "            final_cat[c].fill_value = np.nan\n",
+    "            m = np.isinf(final_cat[c])\n",
+    "            m &= np.isclose(final_cat[c],1E20)\n",
     "            final_cat[c][m] = np.nan\n",
     "            \n",
     "    final_cat['zspec'].fill_value = np.nan\n",
@@ -307,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No old help id col.\n"
+      "No old_help_id col.\n"
      ]
     },
     {
@@ -327,9 +328,10 @@
     "        or c.startswith('m_')\n",
     "        or c.startswith('merr_')\n",
     "    ):\n",
-    "        full_cat[c].fil_value = np.nan\n",
-    "        m = full_cat[c] == np.inf\n",
-    "    \n",
+    "        full_cat[c].fill_value = np.nan\n",
+    "        m = np.isinf(full_cat[c])\n",
+    "        m &= np.isclose(full_cat[c],1E20)\n",
+    "        full_cat[c][m] = np.nan\n",
     "    \n",
     "    \n",
     "try:\n",
@@ -353,7 +355,7 @@
      "data": {
       "text/html": [
        "<i>Table length=5</i>\n",
-       "<table id=\"table4898643864\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4785290264\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>help_id</th><th>field</th><th>ra</th><th>dec</th><th>hp_idx</th><th>ebv</th><th>redshift</th><th>zspec</th><th>f_irac_i1</th><th>ferr_irac_i1</th><th>m_irac_i1</th><th>merr_irac_i1</th><th>flag_irac_i1</th><th>f_irac_i2</th><th>ferr_irac_i2</th><th>m_irac_i2</th><th>merr_irac_i2</th><th>flag_irac_i2</th><th>f_mips_24</th><th>ferr_mips_24</th><th>flag_mips_24</th><th>f_pacs_green</th><th>ferr_pacs_green</th><th>f_pacs_red</th><th>ferr_pacs_red</th><th>f_spire_250</th><th>ferr_spire_250</th><th>flag_spire_250</th><th>f_spire_350</th><th>ferr_spire_350</th><th>flag_spire_350</th><th>f_spire_500</th><th>ferr_spire_500</th><th>flag_spire_500</th><th>cigale_mstar</th><th>cigale_mstar_err</th><th>cigale_sfr</th><th>cigale_sfr_err</th><th>cigale_dustlumin</th><th>cigale_dustlumin_err</th><th>cigale_dustlumin_ironly</th><th>cigale_dustlumin_ironly_err</th><th>cigale_chi2_opt</th><th>cigale_chi2_ir</th><th>cigale_chi2_red</th><th>cigale_chi2_ironly</th><th>stellarity</th><th>stellarity_origin</th><th>flag_cleaned</th><th>flag_merged</th><th>flag_gaia</th><th>flag_optnir_obs</th><th>flag_optnir_det</th><th>zspec_qual</th><th>zspec_association_flag</th><th>f_best_u</th><th>ferr_best_u</th><th>m_best_u</th><th>merr_best_u</th><th>flag_best_u</th><th>f_best_g</th><th>ferr_best_g</th><th>m_best_g</th><th>merr_best_g</th><th>flag_best_g</th><th>f_best_r</th><th>ferr_best_r</th><th>m_best_r</th><th>merr_best_r</th><th>flag_best_r</th><th>f_best_i</th><th>ferr_best_i</th><th>m_best_i</th><th>merr_best_i</th><th>flag_best_i</th><th>f_best_z</th><th>ferr_best_z</th><th>m_best_z</th><th>merr_best_z</th><th>flag_best_z</th><th>f_best_y</th><th>ferr_best_y</th><th>m_best_y</th><th>merr_best_y</th><th>flag_best_y</th><th>f_best_j</th><th>ferr_best_j</th><th>m_best_j</th><th>merr_best_j</th><th>flag_best_j</th><th>f_best_h</th><th>ferr_best_h</th><th>m_best_h</th><th>merr_best_h</th><th>flag_best_h</th><th>f_best_k</th><th>ferr_best_k</th><th>m_best_k</th><th>merr_best_k</th><th>flag_best_k</th><th>f_best_ks</th><th>ferr_best_ks</th><th>m_best_ks</th><th>merr_best_ks</th><th>flag_best_ks</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th></th><th>uJy</th><th>uJy</th><th></th><th>solMass</th><th>solMass</th><th>solMass / yr</th><th>solMass / yr</th><th>W</th><th>W</th><th>W</th><th>W</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th><th>uJy</th><th>uJy</th><th>mag</th><th>mag</th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>bytes18</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float32</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>float32</th><th>float32</th><th>bool</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>float32</th><th>float32</th><th>bool</th><th>float32</th><th>float32</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>bytes20</th><th>bool</th><th>bool</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bool</th></tr></thead>\n",
@@ -559,7 +561,7 @@
      "data": {
       "text/html": [
        "<i>Table masked=True length=5</i>\n",
-       "<table id=\"table4898353784\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4786525352\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>help_id</th><th>best_u</th><th>best_g</th><th>best_r</th><th>best_i</th><th>best_z</th><th>best_y</th><th>best_j</th><th>best_h</th><th>best_k</th><th>best_ks</th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th><th>str18</th></tr></thead>\n",
        "<tr><td>HELP_J174958.317+661836.745</td><td>band_not_available</td><td>band_not_available</td><td>gpc1_r</td><td>gpc1_i</td><td>gpc1_z</td><td>gpc1_y</td><td>band_not_available</td><td>band_not_available</td><td>band_not_available</td><td>band_not_available</td></tr>\n",
