Rerun HDF-N with new XID+ fluxes

--- a/dmu32/dmu32_HDF-N/HDF-N_catalogue_merging.ipynb
+++ b/dmu32/dmu32_HDF-N/HDF-N_catalogue_merging.ipynb
@@ -46,7 +46,7 @@
     "MAKE_CIGALE_INPUT = True\n",
     "MAKE_FINAL = False\n",
     "\n",
-    "SUFFIX = '20180427'"
+    "SUFFIX = '20201103'"
    ]
   },
   {
@@ -81,19 +81,19 @@
    "source": [
     "# # XID+ MIPS24\n",
     "\n",
-    "# xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
-    "#                           \"dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits\")\n",
-    "# xid_mips24.meta = None\n",
+    "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_HDF-N/data/\"\n",
+    "                          \"dmu26_XID+MIPS_HDF-N_cat_20201113.fits\")\n",
+    "xid_mips24.meta = None\n",
     "\n",
-    "# # Adding the error column\n",
-    "# xid_mips24.add_column(Column(\n",
-    "#     data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
-    "#                  xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_mips_24\"\n",
-    "# ))\n",
-    "# xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
-    "# xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
+    "# Adding the error column\n",
+    "xid_mips24.add_column(Column(\n",
+    "    data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
+    "                 xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_mips_24\"\n",
+    "))\n",
+    "xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
+    "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "source": [
     "# XID+ SPIRE\n",
     "\n",
-    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_HDF-N/data/dmu26_XID+SPIRE_HDF-N_cat_20191015.fits\")\n",
+    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_HDF-N/data/dmu26_XID+SPIRE_HDF-N_cat_20201118.fits\")\n",
     "xid_spire.meta = None\n",
     "\n",
     "xid_spire['HELP_ID'].name = \"help_id\"\n",
