make Hs82 blind catalogue

--- a/dmu22/rn_merge.ipynb
+++ b/dmu22/rn_merge.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_names=['Herschel-Stripe-82_SPIRE']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +74,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dmu22_Herschel-Stripe-82/data/\n"
+     ]
+    }
+   ],
+   "source": [
+    "j=0\n",
+    "loc = 'dmu22_'+all_names[j][0:-6]+'/data/'\n",
+    "print(loc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +117,7 @@
     "    name = all_names[j]+'250_cat_MF.fits'\n",
     "    cat1=Table.read(loc+name)\n",
     "\n",
-    "    RA,DEC = cat1['RA'],cat1['Dec']\n",
+    "    RA,DEC = cat1['RA']*u.degree,cat1['Dec']*u.degree\n",
     "    cat1.add_column(Column(np.zeros(np.size(RA))),name='flag')\n",
     "\n",
     "    cat1['F_BLIND_pix_SPIRE_250'].name = 'F_BLIND_pix_SPIRE'\n",
@@ -91,7 +126,7 @@
     "    name = all_names[j]+'350_cat_MF.fits'\n",
     "    cat2=Table.read(loc+name)\n",
     "\n",
-    "    RA_m,DEC_m = cat2['RA'],cat2['Dec']\n",
+    "    RA_m,DEC_m = cat2['RA']*u.degree,cat2['Dec']*u.degree\n",
     "    cat2.add_column(Column(np.zeros(np.size(RA_m))+1),name='flag')\n",
     "\n",
     "    cat2['F_BLIND_pix_SPIRE_350'].name = 'F_BLIND_pix_SPIRE'\n",
@@ -110,13 +145,13 @@
     "    name = all_names[j]+'500_cat_MF.fits'\n",
     "    cat3=Table.read(loc+name)\n",
     "\n",
-    "    RA_m,DEC_m = cat3['RA'],cat3['Dec']\n",
+    "    RA_m,DEC_m = cat3['RA']*u.degree,cat3['Dec']*u.degree\n",
     "    cat3.add_column(Column(np.zeros(np.size(RA_m))+2),name='flag')\n",
     "\n",
     "    cat3['F_BLIND_pix_SPIRE_500'].name = 'F_BLIND_pix_SPIRE'\n",
     "    cat3['FErr_BLIND_pix_SPIRE_500'].name = 'FErr_BLIND_pix_SPIRE'\n",
     "\n",
-    "    catalog = SkyCoord(ra=cat_all['RA'], dec=cat_all['Dec'])  \n",
+    "    catalog = SkyCoord(ra=cat_all['RA']*u.degree, dec=cat_all['Dec']*u.degree)  \n",
     "    c = SkyCoord(ra=RA_m, dec=DEC_m)\n",
     "\n",
     "    idx, d2d, d3d = c.match_to_catalog_sky(catalog) \n",
@@ -136,7 +171,7 @@
     "\n",
     " ![HELP LOGO](https://avatars1.githubusercontent.com/u/7880370?s=75&v=4)\n",
     "\n",
-    "**Authors**: S. Duivenvoorden, P.D. Hurely\n",
+    "**Authors**: S. Duivenvoorden, P.D. Hurley\n",
     "\n",
     " \n",
     "For a full description of the database and how it is organised in to `dmu_products` please the top level [readme](../readme.md).\n",
@@ -158,9 +193,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (herschelhelp_internal)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "helpint"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -172,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
